--- a/package.json
+++ b/package.json
@@ -25,24 +25,31 @@
   },
   "homepage": "https://github.com/bumsyalao/Rewards-portal#readme",
   "dependencies": {
-    "express": "^4.16.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "express": "4.16.2",
+    "react": "16.2.0",
+    "react-dom": "16.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "nodemon": "^1.17.5",
-    "style-loader": "^0.21.0",
-    "webpack": "^3.10.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.2"
+    "autoprefixer": "7.2.4",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-0": "6.24.1",
+    "css-loader": "0.28.8",
+    "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "1.1.6",
+    "html-pdf": "2.2.0",
+    "node-sass": "4.7.2",
+    "nodemon": "1.14.10",
+    "postcss-loader": "2.0.10",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.19.1",
+    "webpack": "3.10.0",
+    "webpack-dev-middleware": "2.0.4",
+    "webpack-hot-middleware": "2.21.0",
+    "webpack-cli": "3.0.8"
   }
 }
