--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/bumsyalao/Rewards-portal#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "4.16.2",
     "react": "16.2.0",
     "react-dom": "16.2.0",
