--- a/package.json
+++ b/package.json
@@ -28,36 +28,37 @@
   },
   "homepage": "https://github.com/bumsyalao/Rewards-portal#readme",
   "dependencies": {
-    "axios": "^0.18.0",
-    "concurrently": "^3.6.0",
-    "copy-webpack-plugin": "^4.5.2",
+    "axios": "0.18.0",
+    "babel-loader": "7.1.2",
+    "concurrently": "3.6.0",
     "express": "4.16.2",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-router": "4.2.0",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "postcss-loader": "2.0.10",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.19.1",
+    "json-loader": "0.5.7",
+    "loader": "2.1.1",
+    "css-loader": "0.28.8",
+    "file-loader": "1.1.6"
   },
   "devDependencies": {
     "autoprefixer": "7.2.4",
+    "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
     "babel-polyfill": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "6.24.1",
-    "css-loader": "0.28.8",
     "extract-text-webpack-plugin": "2.1.2",
-    "file-loader": "1.1.6",
+    "copy-webpack-plugin": "4.5.2",
     "html-pdf": "2.2.0",
-    "json-loader": "^0.5.7",
-    "loader": "^2.1.1",
     "node-sass": "4.7.2",
     "nodemon": "1.14.10",
-    "postcss-loader": "2.0.10",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.19.1",
-    "url": "^0.11.0",
+    "url": "0.11.0",
     "webpack": "3.10.0",
     "webpack-cli": "3.0.8",
     "webpack-dev-middleware": "2.0.4",
